--- a/package.json
+++ b/package.json
@@ -9,28 +9,43 @@
   "scripts": {
     "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{js,cjs,mjs,vue}\"",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
+    "dev": "quasar dev --env-file .env",
     "build": "quasar build",
-    "postinstall": "quasar prepare"
+    "postinstall": "quasar prepare",
+    "fix": "sudo chown -R $USER:$USER node_modules && npm install"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.10.0",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "globals": "^15.12.0",
-    "vite-plugin-checker": "^0.9.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "prettier": "^3.3.3",
+    "@pinia/testing": "^1.0.2",
     "@quasar/app-vite": "^2.1.0",
+    "@quasar/quasar-app-extension-testing-unit-vitest": "^1.2.3",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
+    "c8": "^10.1.3",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vitest": "^0.5.4",
+    "eslint-plugin-vue": "^9.30.0",
+    "flush-promises": "^1.0.2",
+    "globals": "^15.12.0",
+    "jsdom": "^26.1.0",
+    "postcss": "^8.4.14",
+    "prettier": "^3.3.3",
+    "vite-plugin-checker": "^0.9.0",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
